change to front page

--- a/WebApplication/templates/index.html
+++ b/WebApplication/templates/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Segment Anything Prototype</title>
+    <title>Segment Anything And Recognition</title>
+    <link rel="icon" type="image/x-icon" href="static/assets/meta.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -12,72 +13,16 @@
         }
 
         .sidebar {
-            background-color: #e7e4e4;
+
             padding: 10px;
-            border-right: 1px solid #ddd;
+            border: 2px solid #ddd;
+            border-radius: 10%;
             display: flex;
             /* height: 100%; */
             flex-direction: column;
             align-items: center;
-        }
-
-        .tool-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 5px 10px;
-            margin-bottom: 5px;
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            cursor: pointer;
-
-        }
-
-        .tool-button input[type="file"] {
-            position: absolute;
-            opacity: 0;
-            /* Hide the default file input */
-
-            /* Place it below the button text */
-        }
-
-        /* .tool-button span{ */
-
-        /* position: relative; Ensure span text is above the file input */
-        /* z-index: 1; Make sure span text is on top */
-        /* } */
-
-        .tool-button:hover {
-            background-color: #f0f0f0;
-        }
-
-        .mask-area {
-            position: relative;
-        }
-
-        .mask {
-            background-color: rgba(0, 0, 255, 0.5);
-            position: absolute;
-            top: 0;
-            left: 50px;
-            width: 100px;
-            height: 200px;
-        }
-
-        .navbar a {
-            color: #555;
-            padding: 10px 15px;
-            text-decoration: none;
-        }
-
-        .navbar a:hover {
-            color: #000;
-        }
-
-        .active {
-            font-weight: bold;
-            color: #007BFF;
+            height: 40%;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
         }
 
         .bigtext {
@@ -91,6 +36,46 @@
             opacity: 0.6;
             font-size: 15px;
         }
+
+
+        .tool-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 90%;
+            padding: 5px 10px;
+            margin-bottom: 5px;
+            background-color: white;
+            border: 3px solid #E5E7EB;
+            border-radius: 10px;
+            cursor: pointer;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+        .tool-button input[type="file"] {
+            position: absolute;
+            opacity: 0;
+            /* Hide the default file input */
+
+            /* Place it below the button text */
+        }
+
+        .tool-button:hover {
+            background-color: #f0f0f0;
+        }
+
+        .click-button {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+            border: 3px solid #466bd1;
+            border-radius: 10px;
+        }
+
+
 
         /* 页面背景遮罩 */
         .overlay {
@@ -110,7 +95,7 @@
             background-color: white;
             padding: 20px;
             border-radius: 8px;
-            width: 600px;
+            width: 800px;
             display: flex;
             align-items: center;
             text-align: left;
@@ -229,10 +214,8 @@
                 Researched By ycf
             </div>
         </div>
-
         <div>
-            <a href="https://google.com"><img
-                    src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub"
+            <a href="https://github.com/ycfywy/SAR"><img src="static/assets/GitHub-Mark.png" alt="GitHub"
                     class="h-10"></a>
         </div>
     </nav>
@@ -240,38 +223,29 @@
     <!-- Main content -->
     <div class="flex" style="height:86vh;">
         <!-- Sidebar -->
-        <div class="sidebar w-1/6 ml-10 mt-10">
+        <div class="sidebar w-1/6 ml-10 mt-20">
             <!-- <h2 class="text-lg font-semibold mb-2">Tools</h2> -->
             <button class="tool-button">
+                <img class="mr-3" src="static/assets/upload_arrow.svg" alt="upload">
                 <span>Upload</span>
                 <input type="file" id="imageInput" name="image" accept="image/*">
             </button>
-
-
-            <div class="p-3 border rounded-md">
-                <h3 class="text-md font-semibold mb-2">Hover & Click</h3>
-                <p class="text-sm text-gray-600">Click an object one or more times. Shift-click to remove regions.</p>
-                <div class="tool-button mt-3">
-                    <span>Add Mask</span>
-                </div>
-                <div class="tool-button">
-                    <span>Remove Area</span>
+            <div class="click-button ">
+                <div class="ml-3 mt-3" style="flex-direction: row; display: flex; align-items: center; ">
+                    <img class="mr-3" src="static/assets/click.svg" alt="click">
+                    <h3 class="text-md font-semibold ">Hover & Click</h3>
                 </div>
 
-                <div class="tool-button mt-3 text-gray-400 border-gray-400">
-                    <span>Multi-mask</span>
+                <p class="text-sm text-gray-600 ml-3" style="text-indent: 2em; ">Click an object. Wait for a moment, mask image, cropped image and classifi -cation result will be shown
+                    on the screen.</p>
+                <div class="tool-button mt-3"  id="segment-anything">
+
+                    <img class="mr-3" src="static/assets/segall.svg" alt="segment">
+                    <span>Everything</span>
                 </div>
-                <div class="tool-button mt-1 text-gray-400 border-gray-400">
-                    <span>Cut out object</span>
-                </div>
+
             </div>
 
-            <div class="tool-button mt-3">
-                <span>Box</span>
-            </div>
-            <div class="tool-button">
-                <span>Everything</span>
-            </div>
         </div>
 
         <!-- Image display area -->
@@ -285,7 +259,12 @@
     <div class="overlay" id="popupOverlay">
         <div class="popup">
             <!-- 左侧照片 -->
-            <img id="croppedImage" src="https://via.placeholder.com/100" alt="Sample Image">
+            <img id="maskImage" src="static/assets/new-picture.svg" alt="Mask Image">
+
+            <!-- 中间箭头 -->
+            <div class="arrow">→</div>
+            <!-- 左侧照片 -->
+            <img id="croppedImage" src="static/assets/new-picture.svg" alt="Cropped Image">
 
             <!-- 中间箭头 -->
             <div class="arrow">→</div>
@@ -294,8 +273,8 @@
             <table>
                 <thead>
                     <tr>
-                        <th class="col-text">Text</th>
-                        <th class="col-number">Number</th>
+                        <th class="col-text">Class</th>
+                        <th class="col-number">Prob</th>
                     </tr>
                 </thead>
                 <tbody id="table-body">
@@ -308,7 +287,8 @@
     <div class="overlay" id="loadingOverlay">
         <div class="popuploadbar">
             <div class="flex ">
-                <img class="mr-5" src=" static/assets/new-picture.svg">
+                <img class="mr-5" id="loading-img" style="height: 90px; width: 90px;"
+                    src=" static/assets/new-picture.svg">
                 <img class="mr-5" src=" static/assets/arrow-icn.svg">
                 <img class="mr-5" src="static/assets/icn-nn.svg">
                 <img class="mr-5" src="static/assets/arrow-icn.svg">
@@ -321,6 +301,35 @@
 
 
     <script>
+
+        function refreshTable() {
+            const tbody = document.getElementById('table-body');
+            tbody.innerHTML = '';
+            for (let i = 0; i < 10; i++) {
+                const tr = document.createElement('tr');
+                tr.innerHTML = '<td>???</td><td>???</td>';
+                tbody.appendChild(tr);
+            }
+
+        }
+
+        function renderTable(data) {
+
+            const tableBody = document.getElementById('table-body');
+            tableBody.innerHTML = '';
+            data.forEach(element => {
+                const tr = document.createElement('tr');
+                const td1 = document.createElement('td');
+                td1.textContent = element.class
+                const td2 = document.createElement('td');
+                td2.textContent = element.prob
+                tr.appendChild(td1);
+                tr.appendChild(td2);
+                tableBody.appendChild(tr);
+            });
+        }
+
+
         window.onload = function () {
 
             const tbody = document.getElementById('table-body');
@@ -330,12 +339,9 @@
                 tbody.appendChild(tr);
             }
         }
+        // upload image 
         document.querySelector('#imageInput').addEventListener('change', function (event) {
-
-            document.getElementById('loadingOverlay').style.display = 'flex';
-
             const file = event.target.files[0];
-
             if (file) {
                 const img = document.getElementById('uploadedImage')
 
@@ -345,28 +351,43 @@
                     img.style.display = 'block';
                 }
                 reader.readAsDataURL(file);
-                const formData = new FormData();
-                formData.append('image', file);
+            }
+        });
+        // click segment: images will be segmented to generate masks
+        document.getElementById('segment-anything').addEventListener('click', function (event) {
+            document.getElementById('loadingOverlay').style.display = 'flex';
 
-                fetch('/upload', {
-                    method: 'POST',
-                    body: formData
-                }).then(response => response.blob())
+            const img = document.getElementById('uploadedImage');
+
+            if (img.src) {
+                document.getElementById('loading-img').src = img.src;
+                fetch(img.src)
+                    .then(res => res.blob())
                     .then(blob => {
-                        setTimeout(() => {
-                            document.getElementById('loadingOverlay').style.display = 'none';
-                            const imageUrl = URL.createObjectURL(blob);
-                            img.src = imageUrl;
-                        }, 1000)
-                    }).catch(error => {
-                        console.error('Error:', error);
+                        // 创建FormData对象
+                        const formData = new FormData();
+                        formData.append('image', blob, 'image.png'); // 假设图片为png格式，可以根据需要调整
+                        // 使用fetch发送POST请求到后端
+                        fetch('/upload', {  // '/upload' 是后端接收图片的路由
+                            method: 'POST',
+                            body: formData
+                        })
+                            .then(response => response.blob())
+                            .then(blob => {
+                                document.getElementById('loadingOverlay').style.display = 'none';
+                                const imageUrl = URL.createObjectURL(blob);
+                                img.src = imageUrl;
+                            })
+                            .catch(error => {
+                                console.error('错误:', error);
+                            });
                     });
-
-
-
+            } else {
+                console.error('图片未加载');
             }
         });
 
+        // click the image, the mask and cropped and classification result will be shown 
         document.getElementById('uploadedImage').addEventListener('click', function (event) {
 
             document.getElementById('popupOverlay').style.display = 'flex';
@@ -385,12 +406,13 @@
                 },
                 body: JSON.stringify({ x: x, y: y }),
             })
-                .then(response => response.blob())
-                .then(blob => {
+                .then(response => response.json())
+                .then(data => {
+                    refreshTable();
                     console.log("success");
-                    const imageUrl = URL.createObjectURL(blob);
-                    document.getElementById('croppedImage').src = imageUrl;
-                    
+                    document.getElementById('maskImage').src = 'data:image/jpg;base64,' + data.mask;
+                    document.getElementById('croppedImage').src = 'data:image/jpg;base64,' + data.cropped;
+
 
                     fetch('/click_classify', {
                         method: 'POST',
@@ -411,28 +433,14 @@
                 )
 
         })
+
+        // click other area, the table will disappear
         document.getElementById('popupOverlay').addEventListener('click', function (event) {
             if (event.target === this) {
                 this.style.display = 'none';
             }
         });
 
-
-        function renderTable(data) {
-
-            const tableBody = document.getElementById('table-body');
-            tableBody.innerHTML = '';
-            data.forEach(element => {
-                const tr = document.createElement('tr');
-                const td1 = document.createElement('td');
-                td1.textContent = element.class
-                const td2 = document.createElement('td');
-                td2.textContent = element.prob
-                tr.appendChild(td1);
-                tr.appendChild(td2);
-                tableBody.appendChild(tr);
-            });
-        }
 
     </script>
 </body>
